drivers/gpu/drm/i915/intel_display.c
@@ -8893,6 +8893,10 @@ static const struct intel_dmi_quirk intel_dmi_quirks[] = {
 };
 
 static struct intel_quirk intel_quirks[] = {
+	/* Dell XPS13 models */
+	{ 0x0116, 0x1028, 0x052e, quirk_no_pcm_pwm_enable },
+	{ 0x0166, 0x1028, 0x058b, quirk_no_pcm_pwm_enable },
+
 	/* HP Mini needs pipe A force quirk (LP: #322104) */
 	{ 0x27ae, 0x103c, 0x361a, quirk_pipea_force },
 
@@ -8918,9 +8922,8 @@ static struct intel_quirk intel_quirks[] = {
 	/* Acer Aspire 4736Z */
 	{ 0x2a42, 0x1025, 0x0260, quirk_invert_brightness },
 
-	/* Dell XPS13 models */
-	{ 0x0116, 0x1028, 0x052e, quirk_no_pcm_pwm_enable },
-	{ 0x0166, 0x1028, 0x058b, quirk_no_pcm_pwm_enable },
+	/* Acer/eMachines G725 */
+	{ 0x2a42, 0x1025, 0x0210, quirk_invert_brightness },
 };
 
 static void intel_init_quirks(struct drm_device *dev)
